# glide

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci.yml
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_create_users_and_trips.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/routes/: health.py  trips.py
backend/app/models/: __init__.py  trip.py  user.py
backend/app/schemas/: __init__.py  trip.py  user.py
